Migrate to React components by removing legacy files and adding LogTableClient component

--- a/frontend/src/components/LogTable.astro
+++ b/frontend/src/components/LogTable.astro
@@ -1,9 +1,5 @@
 ---
-import LogTableClient from './LogTableClient.js';
+import LogTableClient from './LogTableClient.jsx';
 ---
 
-<div id="log-table-root">
-  <p>Loading logs...</p>
-</div>
-
-<script type="module" src="./LogTableClient.js"></script>
+<LogTableClient client:load />
